<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_newGame"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_logoutNewGame"
            android:layout_width="@dimen/size_35"
            android:layout_height="@dimen/size_35"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/size_10"
            android:background="@color/colorPrimary"
            android:src="@drawable/ic_exit_to_app_accent_30dp" />

        <TextView
            android:id="@+id/textView_helloUserNewGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_10"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/size_20"
            tools:text="Hello user" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/label_organize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_10"
        android:text="@string/organise"
        android:textSize="@dimen/size_25"
        android:textColor="@color/colorPrimary"/>


    <EditText
        android:id="@+id/editText_gameName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_10"
        android:layout_marginStart="@dimen/size_10"
        android:layout_marginTop="@dimen/size_35"
        android:hint="@string/gameName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_cityName"
        android:layout_marginEnd="@dimen/size_10"
        android:layout_marginStart="@dimen/size_10"
        android:layout_marginTop="@dimen/size_10"
        android:hint="@string/enter_city_name"/>
    <EditText
        android:id="@+id/editText_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_10"
        android:layout_marginStart="@dimen/size_10"
        android:layout_marginTop="@dimen/size_10"
        android:hint="@string/address"
        android:inputType="text" />

    <EditText
        android:id="@+id/editText_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_10"
        android:layout_marginStart="@dimen/size_10"
        android:layout_marginTop="@dimen/size_10"
        android:hint="@string/date"
        android:inputType="date" />

    <EditText
        android:id="@+id/editText_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_10"
        android:layout_marginStart="@dimen/size_10"
        android:layout_marginTop="@dimen/size_10"
        android:hint="@string/time"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_Add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add"
        android:textColor="@color/white"
        android:background="@color/colorAccent"
        android:layout_marginTop="@dimen/size_35"
        />
</LinearLayout>