<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_registration"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/size_20"
            android:textColor="@color/colorAccent"/>
    </androidx.appcompat.widget.Toolbar>

    <ProgressBar
        android:layout_width="300sp"
        android:layout_height="300sp"
        android:id="@+id/progressBar_registration"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/btn_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_35"
        android:background="@color/colorPrimaryDark"
        android:text="@string/register"
        android:textColor="#FFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_registration" />

    <LinearLayout
        android:id="@+id/linearLayout_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editText_usernameRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_10"
            android:layout_marginEnd="@dimen/size_10"
            android:hint="@string/enter_username" />

        <EditText
            android:id="@+id/editText_emailRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_10"
            android:layout_marginTop="@dimen/size_10"
            android:layout_marginEnd="@dimen/size_10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editText_passwordRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_10"
            android:layout_marginTop="@dimen/size_10"
            android:layout_marginEnd="@dimen/size_10"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

    </LinearLayout>

    <TextView
        android:id="@+id/label_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20"
        android:text="@string/registration"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/size_35"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_registration" />

    <TextView
        android:id="@+id/textview_goToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_20"
        android:text="@string/if_you_already_have_an_account_click_here"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
