<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_35"
        android:background="@color/colorAccent"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_login" />

    <LinearLayout
        android:id="@+id/linearLayout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editText_emailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_10"
            android:layout_marginTop="@dimen/size_10"
            android:layout_marginEnd="@dimen/size_10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editText_passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_10"
            android:layout_marginTop="@dimen/size_10"
            android:layout_marginEnd="@dimen/size_10"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar_login"
        android:layout_width="300sp"
        android:layout_height="300sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/size_35"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_login"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/size_20"
            android:textColor="@color/colorAccent"/>
    </androidx.appcompat.widget.Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>
